updated the code

--- a/zeekapp4huntingv003/default/app.conf
+++ b/zeekapp4huntingv003/default/app.conf
@@ -10,7 +10,7 @@ description = Dashboards and visualisations for Zeek
 version = 0.0.2
 
 [package]
-id = zeek_app
+id = zeekapp4huntingv003
 check_for_updates = 1
 
 [ui]
